Stylesheet/emote/tag updates 2017-09-24

--- a/source-css/antisonicmotes.css
+++ b/source-css/antisonicmotes.css
@@ -170,7 +170,7 @@ a[href|="/theBengersFavoritestPonyEver"]
 }
 
 /* Big Table */
-a[href|="/sbstern"],a[href|="/sbperplex"],a[href|="/timetostop"],a[href|="/besthuman"]
+a[href|="/sbstern"],a[href|="/sbperplex"],a[href|="/timetostop"],a[href|="/besthuman"],a[href|="/coffeebelle"]
 {
 
    display: block;
@@ -182,6 +182,8 @@ a[href="/sbstern"]{     background-position:   0px      0px; width: 150px; heigh
 a[href="/sbperplex"]{   background-position:   -150px   0px; width: 150px; height: 200px}
 a[href="/besthuman"]{   background-position:   0px      -450px; width: 300px; height: 450px}
 a[href="/timetostop"]{  background-position:   -300px   -450px; width: 151px; height: 198px}
+a[href="/coffeebelle"]{  background-position:  -300px   0px; width: 193px; height: 240px}
+
 
 /**********************************************************************************************/
 /* Colorful names! */
