--- a/source-css/berrytubelounge.css
+++ b/source-css/berrytubelounge.css
@@ -137,7 +137,8 @@ a.author[href$="arborcide"],
 a.author[href$="motbob"],
 a.author[href$="Rosindust89"],
 a.author[href$="batsomething"],
-a.author[href$="QuillOmega0"]
+a.author[href$="QuillOmega0"],
+a.author[href$="AtteLynx"]
 { 
 font-size:0!important; 
 overflow:hidden; 
@@ -159,7 +160,8 @@ a.author[href$="arborcide"]:before,
 a.author[href$="motbob"]:before,
 a.author[href$="Rosindust89"]:before,
 a.author[href$="batsomething"]:before,
-a.author[href$="QuillOmega0"]:before
+a.author[href$="QuillOmega0"]:before,
+a.author[href$="AtteLynx"]:before
 {
 font-size:10px!important; 
 visibility:visible!important;
@@ -180,6 +182,7 @@ a.author[href$="motbob"]:before { content:"Littlecolt" }
 a.author[href$="Rosindust89"]:before { content:"FlutterPie" }
 a.author[href$="batsomething"]:before { content:"mc_square" }
 a.author[href$="QuillOmega0"]:before { content:"Q0" }
+a.author[href$="AtteLynx"]:before { content:"Atte" }
 
 /*Spoiler tag within comments. Your comment should be: "[This is a spoiler sentence.](/spoiler)" */  
 a[href$="/spoiler"] {  
