--- a/source-css/heyitsshugamotes.css
+++ b/source-css/heyitsshugamotes.css
@@ -136,7 +136,7 @@ a[href|="/win8"] {display:block;float:left;cursor:default;overflow:hidden;backgr
 a[href|="/win8"] {width:133px; height:177px; background-position: -0px -0px}
 
 
-
+/* Emote Sheet YUXLK */ a[href|='/nsswitch']{background-image:url(%%YUXLK%%);background-repeat:no-repeat;clear:none;float:left;display:block;width:70px;height:70px;background-position:-5px -5px}a[href|='/shugapixel']{background-image:url(%%YUXLK%%);background-repeat:no-repeat;clear:none;float:left;display:block;width:64px;height:64px;background-position:-85px -5px}a[href|='/shugasmile']{background-image:url(%%YUXLK%%);background-repeat:no-repeat;clear:none;float:left;display:block;width:70px;height:70px;background-position:-159px -5px}a[href|='/sunbot']{background-image:url(%%YUXLK%%);background-repeat:no-repeat;clear:none;float:left;display:block;width:128px;height:120px;background-position:-5px -85px}a[href|='/twipixel']{background-image:url(%%YUXLK%%);background-repeat:no-repeat;clear:none;float:left;display:block;width:64px;height:64px;background-position:-143px -85px}a[href|='/youngsunbot']{background-image:url(%%YUXLK%%);background-repeat:no-repeat;clear:none;float:left;display:block;width:129px;height:119px;background-position:-239px -5px}
 
 /* rdnod animote */
 
