--- a/source-css/mlplounge.css
+++ b/source-css/mlplounge.css
@@ -171,9 +171,9 @@ background: url(%%horsewife%%) center center no-repeat transparent;
 /*Subscriber Name Replace*/
 div.titlebox span.word {display:none}
 
-div.titlebox .subscribers span.number:after {content:" Not asking for help"}
+div.titlebox .subscribers span.number:after {content:" Sillies"}
 div.titlebox .subscribers span.number:after {font-size:12px!important; }
-div.titlebox p.users-online span.number:after { content: " Helping anyway" }
+div.titlebox p.users-online span.number:after { content: " Numpties" }
 div.titlebox p.users-online span.word { display: none }
 
 /*modifications*/
