--- a/source-css/mylittleandysonic1.css
+++ b/source-css/mylittleandysonic1.css
@@ -33,7 +33,7 @@ a { cursor: url(%%cursor1%%), pointer; }
 
 
  #header #header-bottom-left {
-   background: url(%%geybanner%%) 50% 0px !important;
+   background: url(%%sleeptimegammy%%) 50% 0px !important;
    background-repeat: no-repeat!important;
    background-position: 35% 0px;
 }
@@ -1665,7 +1665,7 @@ a.author[href$="Myrandall"] {color:#FF69B4!important}
 a.author[href$="RAINBOW_PONY_SEMEN"]{ color:white!important; background: -moz-linear-gradient(90deg, pink, hotpink); background: -webkit-linear-gradient(left, pink, hotpink);}
 a.author[href$="V17Ds"] {color:#FF9EF2!important}
 a.author[href$="Beatbawx"] {color:#FF9933!important}
-a.author[href$="Parasprite"] {color:#D19FE3!important}
+a.author[href$="Parasprite"] {color:#ffaff7!important}
 a.author[href$="Pseudo-ku"] {color:#b70aff!important}
 
 /* PROPER GREENTEXT (stolen from plounge, which stole from /r/4chan) */
