--- a/source-css/ponymotes.css
+++ b/source-css/ponymotes.css
@@ -447,7 +447,7 @@ a[href|="/twithatsnice"], a[href|="/buysomeapples"], a[href|="/cadsoawesome"], a
 {background-image:url(%%70x70b%%);width:70px;height:70px;display:block;float:left;}
 
 /* 70x70c 'motes */
-a[href|="/trixcookie"], a[href|="/spitfirejudge"], a[href|="/marblescared"], a[href|="/apathiawhat"], a[href|="/changelingsad"], a[href|="/sadtwilight"], a[href|="/sadtwilight2"], a[href|="/twicheesy"], a[href|="/fritterugh"], a[href|="/frittugh"], a[href|="/celestiahh"], a[href|="/nervoustrixie"], a[href|="/youkickedthepuppy"], a[href|="/disreally"], a[href|="/ssshy"], a[href|="/ajangry"], a[href|="/twidisappointed"], a[href|="/sadscoots"], a[href|="/rdspeechless"], a[href|="/scootadrunk"], a[href|="/didneyland"], a[href|="/DIDNEYLAND"], a[href|="/ssawe"], a[href|="/crazyfs"], a[href|="/fstwicrazy"], a[href|="/flutterconfused"], a[href|="/changelingmad"], a[href|="/celoohshiny"], a[href|="/mayormare"], a[href|="/ppcuteshrug"], a[href|="/riffyeah"], a[href|="/supersmugdash"], a[href|="/rdyes"], a[href|="/starlightbeam"], a[href|="/nervousshy"], a[href|="/quibblepants"], a[href|="/moondancerexcited"], a[href|="/ajuwotm8"], a[href|="/ajuwatm8"], a[href|="/celestiawtf"], a[href|="/dragonlordtorch"], a[href|="/rdwutbag"], a[href|="/moondancercrazy"], a[href|="/moondancersquint"], a[href|="/whofarted"], a[href|="/ajwingspanked"], a[href|="/sadtwilight3"], a[href|="/yaksmash"], a[href|="/twiwatstare"], a[href|="/zecoraponder"], a[href|="/twilightpbbt"], a[href|="/celestiapout"], a[href|="/pinkiesly"], a[href|="/flurrywink"], a[href|="/derpypuzzled"], a[href|="/derpywink"], a[href|="/derpyworry"], a[href|="/starlightscience"], a[href|="/derpyohno"], a[href|="/sunsetdisturbed"], a[href|="/supapie"], a[href|="/supajack"], a[href|="/supashy"], a[href|="/supadash"], a[href|="/faustdisapproves"]
+a[href|="/trixcookie"], a[href|="/spitfirejudge"], a[href|="/marblescared"], a[href|="/apathiawhat"], a[href|="/changelingsad"], a[href|="/sadtwilight"], a[href|="/sadtwilight2"], a[href|="/twicheesy"], a[href|="/fritterugh"], a[href|="/frittugh"], a[href|="/celestiahh"], a[href|="/nervoustrixie"], a[href|="/youkickedthepuppy"], a[href|="/disreally"], a[href|="/ssshy"], a[href|="/ajangry"], a[href|="/twidisappointed"], a[href|="/sadscoots"], a[href|="/rdspeechless"], a[href|="/scootadrunk"], a[href|="/didneyland"], a[href|="/DIDNEYLAND"], a[href|="/ssawe"], a[href|="/crazyfs"], a[href|="/fstwicrazy"], a[href|="/flutterconfused"], a[href|="/changelingmad"], a[href|="/celoohshiny"], a[href|="/mayormare"], a[href|="/ppcuteshrug"], a[href|="/riffyeah"], a[href|="/supersmugdash"], a[href|="/rdyes"], a[href|="/starlightbeam"], a[href|="/nervousshy"], a[href|="/quibblepants"], a[href|="/moondancerexcited"], a[href|="/ajuwotm8"], a[href|="/ajuwatm8"], a[href|="/celestiawtf"], a[href|="/dragonlordtorch"], a[href|="/rdwutbag"], a[href|="/moondancercrazy"], a[href|="/moondancersquint"], a[href|="/whofarted"], a[href|="/ajwingspanked"], a[href|="/sadtwilight3"], a[href|="/yaksmash"], a[href|="/twiwatstare"], a[href|="/zecoraponder"], a[href|="/twilightpbbt"], a[href|="/celestiapout"], a[href|="/pinkiesly"], a[href|="/flurrywink"], a[href|="/derpypuzzled"], a[href|="/derpywink"], a[href|="/derpyworry"], a[href|="/starlightscience"], a[href|="/derpyohno"], a[href|="/sunsetdisturbed"], a[href|="/supapie"], a[href|="/supajack"], a[href|="/supashy"], a[href|="/supadash"], a[href|="/faustdisapproves"], a[href|="/windywhistles"], a[href|="/abuseless"]
 {background-image:url(%%70x70c%%);width:70px;height:70px;display:block;float:left;}
 
 /* 100x100a 'motes. */
@@ -499,7 +499,7 @@ a[href|="/regret"], a[href|="/pinkiemail"], a[href|="/obsessivetrixie"], a[href|
 {background-image:url(%%200x200a%%);width:200px;height:200px;display:block;float:left;}
 
 /* 200x200b 'motes. */
-a[href|="/rariluna"], a[href|="/superalicorn"], a[href|="/sursilly"], a[href|="/fluttersnake"], a[href|="/zecoracarry"], a[href|="/sunsetmaid"], a[href|="/sweepsweepsweep"], a[href|="/faustilicious"], a[href|="/waifuwarrior"]
+a[href|="/rariluna"], a[href|="/superalicorn"], a[href|="/sursilly"], a[href|="/fluttersnake"], a[href|="/zecoracarry"], a[href|="/sunsetmaid"], a[href|="/sweepsweepsweep"], a[href|="/faustilicious"], a[href|="/waifuwarrior"], a[href|="/fillyanonhonk"]
 {background-image:url(%%200x200b%%);width:200px;height:200px;display:block;float:left;}
 
 /* 250x250a 'motes. */
@@ -572,8 +572,12 @@ a[href|="/flscrunch"], a[href|="/downcastspike"], a[href|="/lyraseewhatyoudidthe
 {background-image:url(%%misfitso%%);display:block;float:left;}
 
 /* Misfits p */
-a[href|="/celestiawat"], a[href|="/hellodarkness"], a[href|="/discordross"], a[href|="/fluttersmugsmall"], a[href|="/reasonablysizedfluttersmug"], a[href|="/smugpuppykicking"], a[href|="/ppspooks"], a[href|="/trixiedisgust"], a[href|="/chairmanstarlight"], a[href|="/chairmarestarlight"], a[href|="/sodacookie"], a[href|="/sadhug"], a[href|="/octyvinylboop"], a[href|="/sunburstwat"], a[href|="/lyrahandsarejustright"], a[href|="/rescuehappy"], a[href|="/batdash"], a[href|="/tiawing"], a[href|="/dontsleeptonight"], a[href|="/buttstho"], a[href|="/humantwiblush"], a[href|="/dashplace"], a[href|="/tavibedhead"]
+a[href|="/celestiawat"], a[href|="/hellodarkness"], a[href|="/discordross"], a[href|="/fluttersmugsmall"], a[href|="/reasonablysizedfluttersmug"], a[href|="/smugpuppykicking"], a[href|="/ppspooks"], a[href|="/trixiedisgust"], a[href|="/chairmanstarlight"], a[href|="/chairmarestarlight"], a[href|="/sodacookie"], a[href|="/sadhug"], a[href|="/octyvinylboop"], a[href|="/sunburstwat"], a[href|="/lyrahandsarejustright"], a[href|="/rescuehappy"], a[href|="/batdash"], a[href|="/tiawing"], a[href|="/dontsleeptonight"], a[href|="/buttstho"], a[href|="/humantwiblush"], a[href|="/dashplace"], a[href|="/tavibedhead"], a[href|="/ablurk"], a[href|="/abhmph"]
 {background-image:url(%%misfitsp%%);display:block;float:left;}
+
+/* Misfits q */
+a[href|="/abapproved"], a[href|="/sbapproved"], a[href|="/scootapproved"], a[href|="/abwave"]
+{background-image:url(%%misfitsq%%);display:block;float:left;}
 
 /*
   ------
@@ -616,7 +620,7 @@ a[href|="/bonboudicca"], a[href|="/celticbonbon"], a[href|="/fluttereyebrow"], a
 {background-position: -200% -200%;}
 
 /* Grid pos 0,3 'motes */
-a[href|="/whatatwist"],  a[href|="/hnng"], a[href|="/smugcolgate"], a[href|="/rdwat"], a[href|="/nerddash"], a[href|="/fsfascinating"], a[href|="/princessdiscord"], a[href|="/comehugmebro"], a[href|="/hugmebro"], a[href|="/apathiaconcern"], a[href|="/angryaj"], a[href|="/pearsteve"], a[href|="/nerddaring"], a[href|="/celestiahh"], a[href|="/sadspike"], a[href|="/twiapathy"]
+a[href|="/whatatwist"],  a[href|="/hnng"], a[href|="/smugcolgate"], a[href|="/rdwat"], a[href|="/nerddash"], a[href|="/fsfascinating"], a[href|="/princessdiscord"], a[href|="/comehugmebro"], a[href|="/hugmebro"], a[href|="/apathiaconcern"], a[href|="/angryaj"], a[href|="/pearsteve"], a[href|="/nerddaring"], a[href|="/celestiahh"], a[href|="/sadspike"], a[href|="/twiapathy"], a[href|="/fillyanonhonk"]
 {background-position: 0% -300%;}
 
 /* Grid pos 1,3 'motes */
@@ -816,11 +820,11 @@ a[href|="/pptwisad"], a[href|="/flutterdisapprove"], a[href|="/faustdisapproves"
 {background-position: -100% -1900%;}
 
 /* Grid pos 2,19 'motes */
-a[href|="/pptwistare"], a[href|="/bookseller"]
+a[href|="/pptwistare"], a[href|="/bookseller"], a[href|="/windywhistles"]
 {background-position: -200% -1900%;}
 
 /* Grid pos 0,20 'motes */
-a[href|="/rarirdhappy"], a[href|="/daringshrug"]
+a[href|="/rarirdhappy"], a[href|="/daringshrug"], a[href|="/abuseless"]
 {background-position: 0 -2000%;}
 
 /* Grid pos 1,20 'motes */
@@ -1220,3 +1224,9 @@ a[href|="/buttstho"] {width:117px;height:120px;background-position: -240px -250p
 a[href|="/humantwiblush"] {width:96px;height:130px;background-position: -256px -370px}
 a[href|="/dashplace"] {width:114px;height:180px;background-position: -352px -370px}
 a[href|="/tavibedhead"] {width:150px;height:134px;background-position: -466px -370px}
+a[href|="/ablurk"] {width:70px;height:55px;background-position: -256px -500px}
+a[href|="/abhmph"] {width:89px;height:120px;background-position: -356px -250px}
+a[href|="/abapproved"], a[href|="/sbapproved"], a[href|="/scootapproved"] {width:120px;height:120px}
+a[href|="/sbapproved"] {background-position: -120px 0}
+a[href|="/scootapproved"] {background-position: -240px 0}
+a[href|="/abwave"] {width:57px;height:70px;background-position: -360px 0}
