--- a/source-css/trixquisition.css
+++ b/source-css/trixquisition.css
@@ -69,7 +69,7 @@ a[href|='/trixsqueeze'], a[href|='/deathgrip'] { background-position:   0px  -70
 
 a[href|='/teapot']                             { background-position:-280px  -70px }
 a[href|='/teapot']:hover                       { background-position:-140px  -70px }
-a[href|='/teapot']:hover + .bpm-emote          { width:70px!important; height:70px!important; background-image: url(%%hithroc-spritesheet%%)!important; display: block; clear: none; float: left; background-position:-350px -0px!important }
+.bpmote-teapot:hover + .bpm-emote          { width:70px!important; height:70px!important; background-image: url(%%teacup%%)!important; background-position:0px -0px!important }
 a[href|='/trixieohhi']                         { background-position:-420px  -70px }
 a[href|='/trixieohhi']:hover                   { background-position:   0px -210px }
 a[href|='/trixiehello']                        { background-position:   0px -210px }
