--- a/source-css/hithrocemotes.css
+++ b/source-css/hithrocemotes.css
@@ -1,6 +1,6 @@
 /*========== 70px SPRITESHEET ========== */
 /* 70px emotes */
-a[href|='/lyrarelax'], a[href|='/lyrabedroomeyes'], a[href|='/lunadoesntfit'], a[href|='/rdsquee'], a[href|='/egright'], a[href|='/sadstamp'], a[href|='/starlightgrinner'], a[href|='/cuteprincess'], a[href|='/brownieyes'], a[href|='/egbeam'] {
+a[href|='/lyrarelax'], a[href|='/lyrabedroomeyes'], a[href|='/lunadoesntfit'], a[href|='/rdsquee'], a[href|='/egright'], a[href|='/sadstamp'], a[href|='/starlightgrinner'], a[href|='/cuteprincess'], a[href|='/brownieyes'], a[href|='/egbeam'], a[href|='/egshrug'], a[href|='/egcited'], a[href|='/angelicmusic'], a[href|='/greatdoor'], a[href|='/micdrop'], a[href|='/twimondays'], a[href|='/brownieno'] {
   width:70px; height:70px;
   background-image: url(%%70-spritesheet%%);
   display: block; clear: none; float: left;
@@ -21,14 +21,20 @@ a[href|='/starlightgrinner']                             { background-position:-
 a[href|='/cuteprincess']                                 { background-position:-350px    0px }
 a[href|='/brownieyes']                                   { background-position:-420px    0px }
 a[href|='/egbeam']                                       { background-position:-490px    0px }
+a[href|='/egshrug']                                      { background-position:-560px    0px }
+a[href|='/egcited']                                      { background-position:-630px    0px }
 
 a[href|='/egright']                                      { background-position:   0px  -70px; height:95px }
 a[href|='/twiadventuretime']                             { background-position: -70px  -70px }
+a[href|='/angelicmusic'], a[href|='/greatdoor']          { background-position:-210px  -70px; width: 50 }
+a[href|='/micdrop']                                      { background-position:-280px  -70px }
+a[href|='/twimondays']                                   { background-position:-350px  -70px }
+a[href|='/brownieno']                                    { background-position:-420px  -70px }                     
 
 /*========== 100px SPRITESHEET ========== */
 /* 100px emotes */
 
-a[href|='/wondercolt'], a[href|='/wonderpoint'], a[href|='/twifruitbowl'], a[href|='/thisisntapuppy'], a[href|='/stamp'], a[href|='/puppykickerstamp'], a[href|='/pinkitty'] {
+a[href|='/wondercolt'], a[href|='/wonderpoint'], a[href|='/twifruitbowl'], a[href|='/thisisntapuppy'], a[href|='/stamp'], a[href|='/puppykickerstamp'], a[href|='/pinkitty'], a[href|='/dashfan'], a[href|='/fangasm'], a[href|='/fluttershocked'], a[href|='/itwasinthatmomentfluttershyrealisedshehadfuckedup'], a[href|='/riot'], a[href|='/raisepitchforks'], a[href|='/grabyourpitchforks'] {
   width:100px; height:100px;
   background-image: url(%%100-spritesheet%%);
   display: block; clear: none; float: left;
@@ -38,3 +44,6 @@ a[href|='/wonderpoint']        { background-position:-100px 0px }
 a[href|='/twifruitbowl'], a[href|='/thisisntapuppy']       { background-position:-200px 0px }
 a[href|='/stamp'], a[href|='/puppykickerstamp']            { background-position:-300px 0px }
 a[href|='/pinkitty']           { background-position:-400px 0px; width:200px }
+a[href|='/dashfan'], a[href|='/fangasm']                   { background-position:-600px 0px }
+a[href|='/fluttershocked'], a[href|='/itwasinthatmomentfluttershyrealisedshehadfuckedup'] { background-position:-700px 0px }
+a[href|='/riot'], a[href|='/raisepitchforks'], a[href|='/grabyourpitchforks'] { background-position: -800px 0px; width:156px }
