--- a/source-css/octavia.css
+++ b/source-css/octavia.css
@@ -95,6 +95,7 @@ img#header-img{
 
 .sidecontentbox .helplink + .title h1 { font-size: 0 !important }
 .sidecontentbox .helplink + .title h1:before { font-size: 10pt !important; content: "CONDUCTORS" }
+.sidecontentbox .helplink+.title+.content li:nth-of-type(4) { display: none }
 
 /*** Comments ***/
 
